fix expander location on mobile

--- a/src/Page/index.scss
+++ b/src/Page/index.scss
@@ -149,6 +149,10 @@
         height: wc.common-size(bar);
         width: 100%;
         background-color: rgb(var(--zn-panel));
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
 
         @include wc.container-query(smp) {
           flex-direction: column;
